<resources>
    <string name="app_name">Tahliluk Lab</string>
    <string name="app_name_splash">Tahliluk Lab</string>
    <string name="SplashScreen_AppDesc">Your medical analysis at your home</string>
    <string name="sign_in">Sign in</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="don_t_have_a_lab_account">Don\'t have a lab account?</string>
    <string name="sign_up">Sign up</string>
    <string name="lab_name">Lab Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_a_lab_account">Already have a lab account?</string>
    <string name="phone_number">Phone number</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="verify">Verify</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="reset">Reset</string>
    <string name="new_password">New password</string>
    <string name="reservations">Reservations</string>
    <string name="chat">Chat</string>
    <string name="what_re_you_looking_for">What\'re you looking for ?</string>
    <string name="select_Patient">Select a Patient</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change password</string>
    <string name="please_wait">Please wait</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">online</string>
    <string name="old_password">Old password</string>
    <string name="change">Change</string>
    <string name="change_phone">Change phone</string>
    <string name="new_phone_number">New phone number</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="about_us">About us</string>
    <string name="logout">Log out</string>
    <string name="reset_your_password">Reset your Password</string>
    <string name="welcome">Welcome,</string>
    <string name="select_a_language">Select a language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="save">Save</string>
    <string name="enter_phone_number">Enter phone Number</string>
    <string name="enter_password">Enter password</string>
    <string name="must_be_11_digits">Must be 11 digits</string>
    <string name="this_phone_number_does_not_have_an_account">This phone number doesn\'t have an account !</string>
    <string name="error">Error</string>
    <string name="unable_to_updated_token">Unable to updated token</string>
    <string name="less_than_7_digits">Less than 7 digits !</string>
    <string name="not_the_same_password">Not the same password !</string>
    <string name="something_wrong">Something wrong !</string>
    <string name="unable_to_reset_your_password">Unable to reset your password</string>
    <string name="unable_to_sign_in">Unable to sign in</string>
    <string name="select_profile_image">Select profile image</string>
    <string name="enter_lab_name">Enter Lab Name</string>
    <string name="this_phone_number_already_have_an_account">This phone number already have an account !</string>
    <string name="wrong_otp">Wrong OTP</string>
    <string name="wrong_code">Wrong Code !</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="check_current_password">Check password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="can_not_update_information">Can\'t update information</string>
    <string name="unable_to_sign_out">Unable to sign out</string>
    <string name="search_in_patients">search in patients&#8230;</string>
    <string name="msg_check_internet_error">please check internet connection</string>
    <string name="location">Location</string>
    <string name="location_error_message">Unable to get your Location. \nCheck your Internet connection and GPS signal then try again.</string>
    <string name="location_null_message">Must get your location</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="failed_signup">Failed Sign Up</string>
    <string name="medical_analysis">Medical Analysis</string>
    <string name="this_lab_has_not_been_verified_by_us_yet_nplease_wait_a_little_while_we_contact_you">This lab has not been verified by us yet,\nPlease wait a little while we contact you.</string>
    <string name="no_reservations">No reservations added yet!</string>
    <string name="order_details">order details</string>
    <string name="visit_price" translatable="false">"50.0EGP"</string>
    <string name="order_date">Order Date :</string>
    <string name="order_state">Order State :</string>
    <string name="analyses_result">Analysis Result</string>
    <string name="labName">Lab name :</string>
    <string name="pending">Pending</string>
    <string name="inprogress">in Progress</string>
    <string name="completed">Completed</string>
    <string name="Upload_result">Upload Result</string>
    <string name="selected_analyses">selected analytics</string>
    <string name="selectedaddress">Selected Address</string>
    <string name="lbl_subtotal">sub total</string>
    <string name="lbl_Home_visit_cost">"Home visit cost "</string>
    <string name="lbl_total_amount">total amount</string>
    <string name="The_cost_of_the_analysis">The cost of the analysis</string>
    <string name="Tv_Analytics">Analytics</string>
    <string name="Visiting_expenses">Visiting expenses</string>
    <string name="patient_information">patient name</string>
    <string name="egyptian_currency">EGP</string>
    <string name="Additional_instructions">Additional instructions</string>
    <string name="result_uploaded">Result Uploaded</string>
    <string name="MediacalAnalysis">Medical Analysis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="analysis_name">Analysis name</string>
    <string name="analysis_price">Analysis price</string>
    <string name="add_analysis">Add Analysis</string>
    <string name="Analysis_added_successfully">Analysis added successfully</string>
    <string name="confirm_delete_message">Are you sure you want to delete this analysis?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="dialog_delete_analysis_title">Delete Analysis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_analysis">Edit Analysis</string>
    <string name="no_analysis_added_yet">Analytics not added yet</string>
    <string name="enter_analysisName">Enter Analysis name</string>
    <string name="enter_analysisPrice">Enter Analysis price</string>
    <string name="getting_address">Getting the address</string>
    <string name="get_address">"Get the address "</string>
    <string name="please_ask">Please ask for the address while you are at the lab site</string>
</resources>