<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.ChangePasswordFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20ssp"
        android:fontFamily="@font/ntailub"
        android:text="@string/change_password"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_15ssp" />

    <EditText
        android:id="@+id/et_oldPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_input"
        android:color="@color/primary"
        android:elevation="@dimen/_5sdp"
        android:fontFamily="@font/ntailub"
        android:hint="@string/old_password"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:textAlignment="viewStart"
        android:textColor="@color/secondary_text"
        android:textColorHint="@color/third_text"
        android:textSize="@dimen/_16ssp" />

    <EditText
        android:id="@+id/et_newPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_input"
        android:color="@color/primary"
        android:elevation="@dimen/_5sdp"
        android:fontFamily="@font/ntailub"
        android:hint="@string/new_password"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:textAlignment="viewStart"
        android:textColor="@color/secondary_text"
        android:textColorHint="@color/third_text"
        android:textSize="@dimen/_16ssp" />

    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_input"
        android:color="@color/primary"
        android:elevation="@dimen/_5sdp"
        android:fontFamily="@font/ntailub"
        android:hint="@string/confirm_password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:textAlignment="viewStart"
        android:textColor="@color/secondary_text"
        android:textColorHint="@color/third_text"
        android:textSize="@dimen/_16ssp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_changePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_65sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_65sdp"
        android:background="@drawable/background_bottom_sheet_button"
        android:fontFamily="@font/ntailub"
        android:text="@string/change"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_25sdp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</LinearLayout>