<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_labImage"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_user_security_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white_background"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_labImage">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:fontFamily="@font/ntailub"
                    android:text="@string/phone_number"
                    android:textColor="@color/primary_text" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_changeLabPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:drawableTint="@color/primary"
                    android:fontFamily="@font/ntailub"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/phone_text"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/tv_changePassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@null"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:drawableTint="@color/primary"
                    android:fontFamily="@font/ntailub"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/change_password"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_70sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:animateLayoutChanges="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_user_security_info">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:elevation="@dimen/_20sdp"
                android:fontFamily="@font/ntailub"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:paddingStart="@dimen/_25sdp"
                android:paddingEnd="@dimen/_25sdp"
                android:shadowColor="@color/black"
                android:text="@string/logout"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_25sdp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:visibility="visible" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>